# projet_datashow

./: backend_requirements.md  crud.py  database.py  datashow.db  main.py  mcp_benchmark_results.md  models.py  pyproject.toml  run_ui.py  schemas.py  security.py  seed_db.py  test_api.py
front/: package-lock.json
front/public/: index.html
front/src/: App.js  index.css
front/src/assets/css/: LoginPage.css
front/src/assets/css/admin/: GestionParcPage.css  GestionReclamationsPage.css  GestionReparationsPage.css  GestionSallesPage.css  (+4 more)
front/src/components/: Icons.js  Sidebar.css  Sidebar.js
front/src/layouts/: AdminLayout.js  ProfLayout.js
front/src/pages/: LoginPage.js
front/src/pages/admin/: AdminDashboardPage.js  GestionParcPage.js  GestionReclamationsPage.js  GestionReparationsPage.js  GestionSallesPage.js  GestionSeancesPage.js  GestionSemainesPage.js  GestionToutesReservationsPage.js  GestionUtilisateursPage.js
front/src/pages/prof/: EmploiDuTempsPage.js  MesReservationsPage.js  NouvelleReclamationPage.js  ProfDashboardPage.js  ReclamationsPage.js  ReservationPage.js
front/src/routes/: adminRoutes.js  profRoutes.js
routers/: auth.py  datashows.py  emplois.py  reclamations.py  reservations.py  salles_seances.py  utilisateurs.py
ui/: api_client.py  app.py  theme.py
ui/components/: card.py  dialog.py  header.py  sidebar.py  table.py  toast.py
ui/views/: dashboard_view.py  datashows_view.py  emplois_view.py  login_view.py  reclamations_view.py  reservations_view.py  salles_view.py  seances_view.py  semaines_view.py  utilisateurs_view.py
(+5 files in other folders)
